--- a/notebook/Introduction.ipynb
+++ b/notebook/Introduction.ipynb
@@ -31,7 +31,6 @@
    "source": [
     "\\begin{equation*}\n",
     "\\lim_{n\\to \\infty}\\mathbb {P}\\left(n^{1/6}\\left(\\lambda_{\\max}\\left(A_{n}\\right)-2\\sqrt{n}\\right)\\leq x\\right)= F_{\\beta}(x)\\text{ for all }x\\in \\mathbb {R},\n",
-    "\\label{eqn:law}\\tag{1}\n",
     "\\end{equation*}"
    ]
   },
@@ -58,7 +57,6 @@
    "source": [
     "\\begin{equation*}\n",
     "    \\rho(\\lambda_{1},\\lambda_{2},\\cdots,\\lambda_{n})=Z^{-1}_{n,\\beta}\\prod_{i}e^{-\\beta \\lambda^{2}_{i}/4}\\prod_{i<j}\\left|\\lambda_{j}-\\lambda_{i}\\right|^{\\beta},\\text{ }\\lambda_{1}\\geq \\lambda_{2}\\geq \\cdots\\geq \\lambda_{n},\n",
-    "    \\label{eqn:density} \\tag{2}\n",
     "\\end{equation*}"
    ]
   },
@@ -91,7 +89,6 @@
     "      & & \\ddots & \\ddots & \\chi_{\\beta}\\\\\n",
     "      & & & \\chi_{\\beta} & g\n",
     "      \\end{bmatrix}\n",
-    "      \\label{eqn:matrix}\\tag{3}\n",
     "\\end{equation}"
    ]
   },
@@ -100,7 +97,7 @@
    "id": "16b96cf4",
    "metadata": {},
    "source": [
-    "has ([2](#mjx-eqn-density)) as the jpdf of its eigenvalues. Here the entries are independent random variables, up to symmetry, $g\\sim N(0, 2)$ and $\\chi_{k}\\sim$ Chi($k$). We call $H^{\\beta}_{n}$ the $\\beta$-Hermite ensemble."
+    "has the above density as the jpdf of its eigenvalues. Here the entries are independent random variables, up to symmetry, $g\\sim N(0, 2)$ and $\\chi_{k}\\sim$ Chi($k$). We call $H^{\\beta}_{n}$ the $\\beta$-Hermite ensemble."
    ]
   },
   {
@@ -118,7 +115,6 @@
    "source": [
     "\\begin{equation}\n",
     "    \\tilde{H}_{n}^{\\beta}=n^{1/6}\\left(2\\sqrt{n}I-H_{n}^{\\beta}\\right)\n",
-    "    \\label{eqn:bv1}\\tag{4}\n",
     "\\end{equation}"
    ]
   },
@@ -137,7 +133,6 @@
    "source": [
     "\\begin{equation}\n",
     "        \\mathcal {H}_{\\beta}=-\\frac {d^2}{dx^2}+x+\\frac {2}{\\sqrt{\\beta}}b'_{x},\n",
-    "        \\label{eqn:bv2}\\tag{5}\n",
     "\\end{equation}"
    ]
   },
@@ -164,7 +159,6 @@
    "source": [
     "\\begin{equation}\n",
     "    \\mathcal {H}_{\\beta}f=\\Lambda f\\text{ on }L^{2}\\left(\\mathbb {R}_{+}\\right)\n",
-    "    \\label{eqn:bv3}\\tag{6}\n",
     "\\end{equation}"
    ]
   },
@@ -199,7 +193,6 @@
    "source": [
     "\\begin{equation}\n",
     "        \\mathcal {H}_{\\beta}f=\\Lambda f\\text{ on }L^{2}\\left(\\mathbb {R}_{+}\\right)\n",
-    "        \\label{eqn:bvv}\\tag{7}\n",
     "\\end{equation}"
    ]
   },
@@ -250,7 +243,6 @@
    "source": [
     "\\begin{equation}\n",
     "\\frac {\\partial F}{\\partial x}+\\frac {2}{\\beta}\\frac {\\partial^{2} F}{\\partial \\omega^{2}}+\\left(x-\\omega^2\\right)\\frac {\\partial F}{\\partial \\omega}=0\\quad \\text{for }(x,\\omega)\\in \\mathbb {R}^{2},\n",
-    "\\label{eqn:bv}\\tag{8}\n",
     "\\end{equation}"
    ]
   },
@@ -288,7 +280,6 @@
    "source": [
     "$$\\begin{equation}\n",
     "    F_{\\beta}(x)=\\lim_{\\omega\\to \\infty}F(x,\\omega).\n",
-    "    \\label{eqn:f}\\tag{9}\n",
     "\\end{equation}$$"
    ]
   },
@@ -307,7 +298,6 @@
    "source": [
     "$$\\begin{equation}\n",
     "\\frac {\\partial H}{\\partial x}+\\left(\\frac {2}{\\beta}\\sin^{4} \\theta\\right)\\frac {\\partial^{2} H}{\\partial \\theta^{2}}+\\left[\\left(x+\\frac {2}{\\beta}\\sin 2\\theta\\right)\\sin^{2}\\theta-\\cos^{2}\\theta\\right]\\frac {\\partial H}{\\partial \\theta}=0,\n",
-    "\\label{eqn:bvv1}\\tag{10}\n",
     "\\end{equation}$$"
    ]
   },
@@ -346,7 +336,7 @@
     "H(x_{0},\\theta)=\\begin{cases}\n",
     "\\Phi\\left(\\frac {x_{0}-\\cot^{2}\\theta}{\\sqrt{\\left(4/\\beta\\right)\\cot \\theta}}\\right)\\quad &0\\leq \\theta\\leq \\pi/2,\\\\\n",
     "1\\quad &\\pi/2\\leq \\theta.\n",
-    "\\end{cases}\\label{initialc}\\tag{11}\n",
+    "\\end{cases}\n",
     "\\end{align*}$$"
    ]
   },
