--- a/notebook/Introduction.ipynb
+++ b/notebook/Introduction.ipynb
@@ -332,13 +332,9 @@
    "id": "9ef71010",
    "metadata": {},
    "source": [
-    "$$\\begin{equation*}\n",
-    "H(x_{0},\\theta)=\\begin{cases}\n",
+    "$$H(x_{0},\\theta)=\\begin{cases}\n",
     "\\Phi\\left(\\frac {x_{0}-\\cot^{2}\\theta}{\\sqrt{\\left(4/\\beta\\right)\\cot \\theta}}\\right) & \\text{if } 0\\leq \\theta\\leq \\pi/2,\\\\\n",
-    "1 & \\text{if } \\pi/2\\leq \\theta.\n",
-    "\\end{cases}\n",
-    "\\end{equation*}\n",
-    "$$"
+    "1 & \\text{if } \\pi/2\\leq \\theta.\\end{cases}$$"
    ]
   },
   {
