--- a/notebook/Introduction.ipynb
+++ b/notebook/Introduction.ipynb
@@ -332,8 +332,8 @@
    "id": "959c6033",
    "metadata": {},
    "source": [
-    "$$H(x_{0},\\theta)=\\begin{cases}\\Phi\\left(\\frac {x_{0}-\\cot^{2}\\theta}{\\sqrt{\\left(4/\\beta\\right)\\cot \\theta}}\\right) & 0\\leq \\theta\\leq \\pi/2,\\\\\n",
-    "        1 & \\pi/2\\leq \\theta.\\end{cases}$$"
+    "$$H(x_{0},\\theta)=\\begin{cases*}\\Phi\\left(\\frac {x_{0}-\\cot^{2}\\theta}{\\sqrt{\\left(4/\\beta\\right)\\cot \\theta}}\\right) & 0\\leq \\theta\\leq \\pi/2,\\\\\n",
+    "        1 & \\pi/2\\leq \\theta.\\end{cases*}$$"
    ]
   },
   {
