Update Evolution of the solution.ipynb

--- a/notebook/Evolution of the solution.ipynb
+++ b/notebook/Evolution of the solution.ipynb
@@ -254,7 +254,7 @@
    "id": "9ce6e3aa",
    "metadata": {},
    "source": [
-    "The following contour plots show the evolution of $H(x,\\theta)$ as $x$ decreases from $x=13$ to $-10$ in the finite-difference discretization setting. $\\Delta x=-10^{-3}$ and $M=10^4$ are used."
+    "The following contour plots show the evolution of $H(x,\\theta)$ as $x$ decreases from $x=13$ to $-10$ in the finite-difference discretization setting with trapezoidal method. $\\Delta x=-10^{-3}$ and $M=10^4$ are used."
    ]
   },
   {
