Update Density of the TW distribution.ipynb

--- a/notebook/Density of the TW distribution.ipynb
+++ b/notebook/Density of the TW distribution.ipynb
@@ -16,7 +16,7 @@
    "id": "6c944e48",
    "metadata": {},
    "source": [
-    "The following waterfall plot shows the density of the Tracy-Widom distribution for $\\beta=1,2,\\cdots,10$ over the domain $x\\in [-6,5]$ using finite-difference discretization with default values for the parameters."
+    "The following waterfall plot shows the density of the Tracy-Widom distribution for $\\beta=1,2,\\cdots,10$ over the domain $x\\in [-6,5]$ using finite-difference discretization and trapezoidal method with default values for the parameters."
    ]
   },
   {
